@@ -1,3 +1,8 @@
+2013-12-28  Glenn Morris  <rgm@gnu.org>
+
+	* admin.el (cusver-scan): Warn about missing :types.
+	(cusver-check): Interactively, require existing directories.
+
 2013-12-27  Xue Fuqiao  <xfq.free@gmail.com>
 
 	* admin.el (manual-misc-manuals, make-manuals):
